--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 services:
-  nextjsprj:
+  react:
     container_name: front-documents-manager-docker-container
     build:
       context: .
